--- a/projects/demo/src/app/badges/badge-colors.demo.html
+++ b/projects/demo/src/app/badges/badge-colors.demo.html
@@ -5,7 +5,7 @@
   ~ The full license information can be found in LICENSE in the root directory of this project.
   -->
 
-<h2>Angular Badge</h2>
+<h2>Angular Solid Badges</h2>
 <div class="clr-example">
   <div>
     <clr-badge>11</clr-badge>
@@ -21,6 +21,16 @@
     <clr-badge [clrColor]="'gray'">12</clr-badge>
   </div>
 </div>
+<h2>Angular Outlined Badges</h2>
+<div class="clr-example">
+  <div>
+    <clr-badge [clrSolid]="false" [clrColor]="'gray'">11</clr-badge>
+    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Purple">15</clr-badge>
+    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Blue">2</clr-badge>
+    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.Orange">3</clr-badge>
+    <clr-badge [clrSolid]="false" [clrColor]="ClrBadgeColors.LightBlue">12</clr-badge>
+  </div>
+</div>
 
 <h2>CSS Badge</h2>
 <div class="clr-example">
@@ -30,6 +40,10 @@
     <span class="badge badge-blue">2</span>
     <span class="badge badge-orange">3</span>
     <span class="badge badge-light-blue">12</span>
+    <span class="badge badge-outlined badge-purple">15</span>
+    <span class="badge badge-outlined badge-blue">2</span>
+    <span class="badge badge-outlined badge-orange">3</span>
+    <span class="badge badge-outlined badge-light-blue">12</span>
     <span class="badge badge-1">90</span>
     <span class="badge badge-2">51</span>
     <span class="badge badge-3">25</span>
